# dd-trace-api-py

./: .gitignore  README.md  api.yaml  generate.py  hatch.toml  mypy.ini  pyproject.toml
.github/workflows/: build_deploy.yml  docs.yml  main.yml
dd_trace_api/: __init__.py  _version.py  api.yaml  constants.py  written.py
docs/: contributing.md  ddtrace_api.html  index.html  quickstart.md  search.js
docs/ddtrace_api/: constants.html  written.html
test/: test_api.py
