[project]
name = "dd_trace_api"
version = "0.0.0"
description = "The public API of the dd-trace libraries"
urls = [
    "https://github.com/DataDog/dd-trace-api-py"
]
authors = [
    "Datadog, Inc."
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache 2"
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "pyyaml >= 6.0.0",
    "pytest"
]
