[project]
name = "dd_trace_api"
version = "0.0.0"
description = "The public API of the dd-trace libraries"
authors = [
    { name = "Datadog, Inc.", email = "dev@datadoghq.com" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "pyyaml >= 6.0.0",
    "pytest"
]


[project.urls]
"Bug Tracker" = "https://github.com/DataDog/dd-trace-py-api/issues"
Changelog = "https://github.com/DataDog/dd-trace-py-api/releases"
Homepage = "https://github.com/DataDog/dd-trace-py-api/"
"Source Code" = "https://github.com/DataDog/dd-trace-py-api/"
